// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectAddress > should render disabled 1`] = `
<div>
  <button
    class="relative w-full rounded cursor-default focus:ring-2 focus:ring-theme-primary-400 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    disabled=""
    type="button"
  >
    <span
      class="flex absolute inset-y-0 left-14 items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
      />
    </span>
    <div
      class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-300 bg-theme-secondary-100 dark:border-theme-secondary-700 dark:bg-theme-secondary-800"
    >
      <div
        class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 ring-0 transition-all duration-100 border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700"
      />
      <div
        class="flex relative invisible flex-1 h-full"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none sm:text-base! text-theme-secondary-text"
          data-testid="SelectAddress__input"
          disabled=""
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render empty 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-2 focus:ring-theme-primary-400 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="flex absolute inset-y-0 left-14 items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
      />
    </span>
    <div
      class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
    >
      <div
        class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 ring-0 transition-all duration-100 border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700"
      />
      <div
        class="flex relative invisible flex-1 h-full"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render invalid 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-2 focus:ring-theme-primary-400 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="flex absolute inset-y-0 left-14 right-24 items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
      />
    </span>
    <div
      class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-danger-500 bg-theme-background focus-within:ring-theme-danger-500"
    >
      <div
        class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 ring-0 transition-all duration-100 border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700"
      />
      <div
        class="flex relative invisible flex-1 h-full"
      >
        <input
          aria-invalid="true"
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
      <div
        class="flex items-center divide-x divide-theme-secondary-300 text-theme-danger-500 dark:divide-theme-secondary-800"
        data-testid="Input__addon-end"
      >
        <span
          data-testid="Input__error"
        >
          <div
            class="pr-3 text-theme-danger-500"
          >
            <div
              style="height: 20px; width: 20px;"
            >
              <svg
                id="circle-exclamation-mark"
                style="height: 100%; width: 100%;"
                viewBox="0 0 20 20"
                x="0"
                xml:space="preserve"
                xmlns="http://www.w3.org/2000/svg"
                y="0"
              >
                <g
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                >
                  <circle
                    cx="10"
                    cy="10"
                    r="9"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 10.5v-5"
                    stroke-linecap="round"
                    stroke-miterlimit="10"
                  />
                  <path
                    d="M10 14h0"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </g>
              </svg>
            </div>
          </div>
        </span>
        <div
          class="pl-3"
        >
          <div
            class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render with preselected address 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-2 focus:ring-theme-primary-400 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="flex absolute inset-y-0 left-14 items-center border border-transparent right-13"
    >
      <div
        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
      >
        <span
          class="overflow-hidden min-w-0 text-sm text-base font-semibold sm:text-base no-ligatures text-theme-secondary-500 dark:text-theme-secondary-700"
          data-testid="Address__address"
        >
          0x659A76be283644AEc2003aa8ba26485047fd1BFB
        </span>
      </div>
    </span>
    <div
      class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
    >
      <div
        class="inline-flex relative justify-center items-center w-8 h-8 text-sm align-middle rounded transition-all duration-100 shrink-0"
        data-testid="Avatar"
      >
        <div
          class="inline-flex overflow-hidden justify-center items-center w-full h-full align-middle rounded"
        >
          <img
            alt="0x659A76be283644AEc2003aa8ba26485047fd1BFB"
            src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%234381C0%22%2F%3E%3C%2Fsvg%3E"
            title="0x659A76be283644AEc2003aa8ba26485047fd1BFB"
          />
        </div>
      </div>
      <div
        class="flex relative invisible flex-1 h-full"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value="0x659A76be283644AEc2003aa8ba26485047fd1BFB"
        />
      </div>
      <div
        class="flex items-center divide-x divide-theme-secondary-300 text-theme-primary-300 dark:divide-theme-secondary-800 dark:text-theme-secondary-600"
        data-testid="Input__addon-end"
      >
        <div
          class=""
        >
          <div
            class="flex items-center p-1 space-x-3 bg-transparent rounded transition-colors text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-700 dark:hover:text-white hover:bg-theme-primary-100 hover:text-theme-primary-700"
          >
            <div>
              <div
                style="height: 20px; width: 20px;"
              >
                <svg
                  id="user"
                  style="height: 100%; width: 100%;"
                  viewBox="0 0 20 20"
                  x="0"
                  xml:space="preserve"
                  xmlns="http://www.w3.org/2000/svg"
                  y="0"
                >
                  <g
                    fill="none"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                  >
                    <circle
                      cx="10"
                      cy="5"
                      r="4"
                    />
                    <path
                      d="M2 19c0-4.899 3.544-9 8-9 4.354 0 8 3.987 8 9"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`SelectAddress > should render without user icon 1`] = `
<div>
  <button
    class="relative w-full rounded focus:ring-2 focus:ring-theme-primary-400 focus:outline-hidden"
    data-testid="SelectAddress__wrapper"
    type="button"
  >
    <span
      class="flex absolute inset-y-0 right-4 left-14 items-center border border-transparent"
    >
      <div
        class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
      />
    </span>
    <div
      class="flex overflow-hidden items-center px-4 space-x-2 w-full h-12 rounded border transition-colors duration-200 appearance-none sm:h-14 focus-within:ring-1 text-theme-text border-theme-secondary-400 bg-theme-background dark:border-theme-secondary-700 focus-within:border-theme-primary-600 focus-within:ring-theme-primary-600"
    >
      <div
        class="inline-flex justify-center items-center py-1 px-2 w-8 h-8 text-sm align-middle rounded-full border-2 ring-0 transition-all duration-100 border-theme-secondary-200 bg-theme-secondary-200 ring-theme-background dark:border-theme-secondary-700 dark:bg-theme-secondary-700"
      />
      <div
        class="flex relative invisible flex-1 h-full"
      >
        <input
          autocomplete="off"
          class="bg-transparent! p-0! focus:shadow-none focus:ring-transparent! focus:outline-hidden [&.shadow-none]:shadow-none no-ligatures placeholder:text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 w-full border-none text-sm! sm:text-base!"
          data-testid="SelectAddress__input"
          readonly=""
          type="text"
          value=""
        />
      </div>
    </div>
  </button>
</div>
`;
